ingres-example/app.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata: 
  labels: 
    app: cheese
    cheese: stilton
  name: stilton
  namespace: nginx-ingress
spec: 
  replicas: 2
  selector: 
    matchLabels: 
      app: cheese
      task: stilton
  template: 
    metadata: 
      labels: 
        app: cheese
        task: stilton
        version: v0.0.1
    spec:
      containers: 
        - 
          image: "errm/cheese:stilton"
          name: cheese
          ports: 
            - 
              containerPort: 80
          resources: 
            limits: 
              cpu: 100m
              memory: 50Mi
            requests: 
              cpu: 100m
              memory: 50Mi
